# Sovereign_Health_MCP

./: .env.example  .gitignore  COMMERCIAL_LICENSE.md  LICENSE.md  Makefile  README.md  fastmcp.json  pyproject.toml
src/cip/core/audit/: logger.py
src/cip/core/config/: settings.py
src/cip/core/llm/: client.py  provider.py  response.py  system_prompt.py
src/cip/core/llm/providers/: __init__.py  anthropic.py  mock.py  openai.py
src/cip/core/mantic/: __init__.py  client.py  models.py
src/cip/core/privacy/: policy.py
src/cip/core/scaffold/: engine.py  loader.py  matcher.py  models.py  registry.py  renderer.py  validator.py
src/cip/core/server/: app.py  main.py
src/cip/core/storage/: __init__.py  database.py  encryption.py  models.py  repository.py
src/cip/domains/health/connectors/: __init__.py  apple_health.py  apple_health_parser.py  composite.py  manual_entry.py  mock_data.py  providers.py
src/cip/domains/health/domain_logic/: signal_models.py  signal_translator.py  trend_analyzer.py
tests/: conftest.py
tests/integration/: test_health_mantic_integration.py  test_server.py
tests/unit/core/audit/: test_audit_logger.py
tests/unit/core/mantic/: test_mantic_client.py
tests/unit/core/privacy/: test_privacy_policy.py
tests/unit/core/scaffold/: test_scaffold_routing.py
tests/unit/core/storage/: test_database.py  test_encryption.py  test_repository.py
tests/unit/domains/health/: test_consumer_health_profile.py  test_health_signal_translator.py  test_personal_health_signals_tool.py  test_trend_analyzer.py
(+16 files in other folders)
